Date	Added

02/04
        * Added experimental code to generate a stack dump when it segfaults, thanks
          to Ser [celest]
          - does not work with Cygwin, as it does not have glibc
          - to enable, edit the Makefile and remove the # on the line:

                # OPT += -DDUMPSTACK -rdynamic

          - What it does: everytime eA crashes it'll generate a file "stackdump_
            <number>.txt" in your save folder with a backtrace, which you can
            examine and send to a dev to be fixed.

        * Some more tidying up in status_get_ functions [celest]

02/03
        * When loading shop scripts automatically check if the prices can be exploited
          with OC/DC [celest]
        * If the buying price provided in item_db.txt is above 2x higher than selling
          price for an item no need to reset and redetermine the buying price [celest]
        * Fixed a mistake that was causing Ruwach to only work in PvP and PvM [celest]
        * Added DracoRPG's code for Joint Beat effects, thanks! [celest]

02/02
	* Added checks to prevent some crashes in skill.c
	  [Full credit to shinomori] [SVN 1022: Ajarn]
        * Removed nullpo check in skillnotok() -- otherwise it will display fail 
          messages for monster skills [celest]
        * Added crash check for Ice Wall [celest]
        * Added some optimisations by Ilpalazzo-sama [celest]
          - reduce mob_data->size variable to 1 bytes
          - change from if-else to switch statements in buildin_strmobinfo

01/31
        * Fixed a typo in Pressure causing it to deduct sp from the caster, and remove
          its sp_rate requirement [celest]
        * Updated skill_range_leniency code when casting a ground targetting spell      
          ( as in Revision 968) [celest]
        * Added Karma and Manner to const.txt
          -- To change a player's alignment to more Good/Evil in scripting for example,
             use:
                 set Karma, Karma + <number here>;
