@@ -1,7 +1,15 @@
 // Athena Login Server configuration file.
 // Translated by Peter Kieser <pfak@telus.net>
+
+// Login Server IP
+//
+// You should only need to set this if you are running behind a
+// firewall or on a machine with multiple interfaces.  In that case,
+// you need to specify the IP address you wish to export to the entire world.
+//
+//login_ip:127.0.0.1
  
-// Port to bind Login Server to (always binds to all IP addresses)
+// Login Server Port
 login_port: 6900
 
 // Whether remote administration is enabled or disabled (1 for enabled, 0 for disabled)
